--- a/test1.ipynb
+++ b/test1.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of test1.ipynb",
+      "name": "test1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7+sExmus919M0a96rL424",
+      "authorship_tag": "ABX9TyP5sGs3KibRlaJVs+TTfR4m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7ChUSrv3swrw",
-        "outputId": "59117d3b-b960-4c37-b27d-e8c59521c1af",
+        "outputId": "c0141378-e9da-4e4f-f9b5-dcf5df4939f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,15 +42,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello World!\n",
-            "Hello Pusan\n"
+            "Hello World!\n"
           ]
         }
       ],
       "source": [
         "print(\"Hello World!\")\n",
-        "a = \"Hello Pusan\"\n",
-        "print(a)"
+        "print(\"Hello Pusan!\")"
       ]
     }
   ]
